# app_migrator

./: .gitignore  .pre-commit-config.yaml  AI_AGENT_CRASH_PREVENTION_SPECS.md  AI_AGENT_TECHNICAL_SPECS.md  ARCHITECTURE_PLAN.md  CHANGELOG.md  COMMAND_MODULES_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  ERPNext_Verification_Procedure.md  FINAL_FIX_PLAN.md  FINAL_TEST_REPORT.md  LICENSE  MIGRATION_PROGRESS_REPORT.md  QUICK_REFERENCE.md  README.md  README_backup.md  RELEASE_NOTES_v5.0.1.md  REPOSITORY_FIX_GUIDE.md  Recommended Documentation Structure.md  SESSION_HANDOUT.md  STEP-602-11-FIX_SUMMARY.md  STEP-602-13-final_verification.py  STEP-602-14-PRODUCTION_READINESS.md  Technical Information  USER_GUIDE.md  __init__.py  check_pattern.py  cleanup_orphaned_apps.py  comprehensive_boot_test.py  create_clean_site.py  debug_discovery_function.py  debug_interactive_display.py  diagnose_boot_issue.py  enhance_migration_with_autofix.py  enhanced_migration_engine_github.py  final_boot_verification.py  final_verification.py  fix_app_structure.py  fix_discovery_bug.py  (+37 more)
.git_backup_20251014_153629/app_migrator/: hooks.py
.git_backup_20251016_095605/: README.md
.git_backup_20251017_101644/: push_to_git_plus.sh
.git_backup_20251017_120033/: push_to_git_plus.sh
.git_backup_20251018_162342/: .gitignore  README.md
.git_backup_20251018_162342/app_migrator/: __init__.py  hooks.py
.git_backup_20260201_073622/app_migrator/: hooks.py
.github/workflows/: ci.yml
app_migrator/: __init__.py  api.py  api_backup_old.py  api_merged.py  app_migrator.py  commands.py  fixtures.py  hooks.py  migrator.py  modules.txt  post_install.py  scheduler_events.py  setup.py
app_migrator/api/: __init__.py  migrations.py
hooks/: pre_migration.py
(+161 files in other folders)
