[project]
name = "app_migrator"
version = "7.0.1"
description = "AI-Powered Enterprise Application Migration System for Frappe/ERPNext"
dependencies = []

[project.optional-dependencies]
develop = [
    "pre-commit",
]

[tool.bench]
app_name = "app_migrator"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
