[metadata]
name = app_migrator
version = 9.0.0
author = App Migrator Team
author_email = 
description = App Migrator Enterprise - Multi-bench migration toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rogerboy38/app_migrator
project_urls =
    Bug Tracker = https://github.com/rogerboy38/app_migrator/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.10
install_requires =
    keyring>=25.0
    requests>=2.31.0
    click>=8.0.0

[options.packages.find]
where = .
include = app_migrator*
exclude = 
    tests*
    docs*
    *.tests
    *.tests.*
    tests.*

[options.entry_points]
console_scripts =

[easy_install]
allow_hosts = *
